--- a/ValsBurekAdventures/ValsBurekAdventures/My Project/Resources.resx
+++ b/ValsBurekAdventures/ValsBurekAdventures/My Project/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Platforma" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Platforma.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Obama-head" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Obama-head.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Platforma" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Platforma.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Burek" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Burek.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
