--- a/ValsBurekAdventures/ValsBurekAdventures/My Project/Resources.resx
+++ b/ValsBurekAdventures/ValsBurekAdventures/My Project/Resources.resx
@@ -136,6 +136,9 @@
   <data name="Eat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eat.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="gg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gg.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Meme" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Meme.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
